Fix Build Tree Overflow
Fix Build Tree Overflow

--- a/ConfigRequestQuestionApp/ConfigRequestQuestionApp/Custom_Scripts/Styles/Custom/Core/main.css
+++ b/ConfigRequestQuestionApp/ConfigRequestQuestionApp/Custom_Scripts/Styles/Custom/Core/main.css
@@ -510,7 +510,39 @@ div#all-q-datatable_filter label input {
     width: 150%;
 }
 
+#q-option-btns {
+    height: 9%;
+}
 
+
+div#question-tree-wrapper {
+    flex: 0 0 66.666667%;
+    max-width: 64.666667%;
+}
+
+#build-js-tree-wrapper {
+    height: calc(91% - 10px);
+    overflow: auto;
+    box-shadow: inset 0px 0px 10px rgba(0,0,0,0.5);
+    margin-bottom: 10px;
+    padding: 10px 0;
+}
+
+#build-js-tree-wrapper::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background-color: #F5F5F5;
+    border-radius: 10px;
+}
+
+#build-js-tree-wrapper::-webkit-scrollbar {
+    width: 10px;
+    background-color: #F5F5F5;
+}
+
+#build-js-tree-wrapper::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.44, rgb(122,153,217)), color-stop(0.72, rgb(73,125,189)), color-stop(0.86, rgb(28,58,148)));
+}
 
 #build-js-tree ul li a.jstree-anchor:after {
     content: "  ";
